objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <inlineHelpText>This is count of activity</inlineHelpText>
        <label># Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Add_to_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field will get cleared and used on a periodic basis.</inlineHelpText>
        <label>Add to Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alt_City__c</fullName>
        <inlineHelpText>City in conflict with Account</inlineHelpText>
        <label>Alt City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_County__c</fullName>
        <label>Alt County</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_State__c</fullName>
        <label>Alt State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Street_Address__c</fullName>
        <inlineHelpText>Address in conflict with account address</inlineHelpText>
        <label>Alt Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Zip__c</fullName>
        <label>Alt Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bankruptcy__c</fullName>
        <label>Bankruptcy?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bounced_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing users only. Email address bounced a message.</description>
        <label>Bounced Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Lead_Source__c</fullName>
        <inlineHelpText>The high level way in which this contact was introduced to CleanFund.  CF Sub Lead source captures the specific way we were introduced.</inlineHelpText>
        <label>CF Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CF_Lead_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Notes__c</fullName>
        <label>Campaign Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Can_contact_with_marketing_materials__c</fullName>
        <inlineHelpText>Can CleanFund reach out to this person with marketing collateral?</inlineHelpText>
        <label>Can contact with marketing materials?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Account.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Logged_In__c</fullName>
        <formula>IF( Owner.Id  = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Owner Logged In?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Activities_Last_90_Days__c</fullName>
        <label>Count of Activities Last 90 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Activities_Last_Week__c</fullName>
        <label>Count of Activities Last Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Activities_This_Week__c</fullName>
        <label>Count of Activities This Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Account.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Lead_Converted__c</fullName>
        <description>Date a Lead Gen Team Lead was converted to a Contact.</description>
        <label>Date Lead Converted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DummyLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DummyLookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Crime__c</fullName>
        <label>Financial Crime</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Foreclosure_Short_Sale_Deed_in_Lieu__c</fullName>
        <label>Foreclosure/Short Sale/Deed in Lieu</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Import2_Id__c</fullName>
        <description>Id of the record in original system, where it was imported from by Import2.com</description>
        <externalId>true</externalId>
        <label>Import2 Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Inactive_with_current_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For use when a Contact has left a company.</description>
        <inlineHelpText>Only choose &quot;Inactive&quot; if the contact is no longer with the assigned Account.</inlineHelpText>
        <label>Inactive with Current Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Property_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates whether this contact is a property owner.</inlineHelpText>
        <label>Is Property Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litigation__c</fullName>
        <label>Litigation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_Research__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if any of the Contact Fields need more research</inlineHelpText>
        <label>Needs Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <inlineHelpText>What is the next step with this contact?</inlineHelpText>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PACE_Friendly__c</fullName>
        <description>Determine if banks are willing to do PACE or not</description>
        <label>PACE Friendly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Possible_matched_Contacts__c</fullName>
        <label>Possible_matched_Contacts</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Public_Record_Search_Notes__c</fullName>
        <inlineHelpText>Notes on the public record search.</inlineHelpText>
        <label>Public Record Search Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Public_Records_Search_Date__c</fullName>
        <inlineHelpText>The date the public records was searched.</inlineHelpText>
        <label>Public Records Search Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Contact&apos;s role within their organization.</description>
        <inlineHelpText>Choose the role that is the most applicable for the Contact within their organization.</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Executive Management</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <inlineHelpText>SSN of signer for documents related to an opportunity</inlineHelpText>
        <label>SSN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SolarPACE_Calc_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SolarPACE Calc Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Account.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <formula>Account.Street_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Lead_Source__c</fullName>
        <label>CF Sub-Lead Source</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Account.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eContacts__Business_Card__c</fullName>
        <label>Image Data Only</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>eContacts__Created_By_eContacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created By eContacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eContacts__Location_Text__c</fullName>
        <label>Location Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eContacts__Location__c</fullName>
        <label>Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the search term.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether contact hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Accounting_Channel</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>Next_Steps__c</columns>
        <columns>Campaign_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>Accounting Channel</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Auto_Dealer_Vertical</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>FULL_NAME</columns>
        <columns>Next_Steps__c</columns>
        <columns>Campaign_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>VC - Auto Dealer</label>
    </listViews>
    <listViews>
        <fullName>Banks_Channel</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>Next_Steps__c</columns>
        <columns>Campaign_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>Banks Channel</label>
    </listViews>
    <listViews>
        <fullName>CRE_Mortgage_Channel</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Next_Steps__c</columns>
        <filterScope>Everything</filterScope>
        <label>CRE Mortgage Channel</label>
    </listViews>
    <listViews>
        <fullName>Cold_Storage_Vertical</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>Next_Steps__c</columns>
        <columns>Campaign_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>Cold Storage Vertical</label>
    </listViews>
    <listViews>
        <fullName>Contact_Main_Dashboard</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Role__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <columns>Campaign_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>Contact Main Dashboard</label>
    </listViews>
    <listViews>
        <fullName>Contact_with_Marketing</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Can_contact_with_marketing_materials__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Inactive_with_current_Account__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Inactive_with_current_Account__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Contact with Marketing?</label>
    </listViews>
    <listViews>
        <fullName>Contacts_of_Former_Employees</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Brooke</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Wendy</value>
        </filters>
        <label>Contacts that need to be reassigned</label>
    </listViews>
    <listViews>
        <fullName>Developers_NC_Vertical</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>Next_Steps__c</columns>
        <columns>Campaign_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>Developers (NC) Vertical</label>
    </listViews>
    <listViews>
        <fullName>Grocery_Vertical</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>Next_Steps__c</columns>
        <columns>Campaign_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>Grocery Vertical</label>
    </listViews>
    <listViews>
        <fullName>Health_Country_Club_Vertical</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>FULL_NAME</columns>
        <columns>Next_Steps__c</columns>
        <columns>Campaign_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>VC - Health/Country Club</label>
    </listViews>
    <listViews>
        <fullName>Health_Country_Club_Vertical_My</fullName>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>FULL_NAME</columns>
        <columns>Next_Steps__c</columns>
        <columns>Campaign_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Owner_Logged_In__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>VC - Health/Country Club (My)</label>
    </listViews>
    <listViews>
        <fullName>Hospital_Vertical</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>Next_Steps__c</columns>
        <columns>Campaign_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>Hospital Vertical</label>
    </listViews>
    <listViews>
        <fullName>Hospitality_Vertical</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>Next_Steps__c</columns>
        <columns>Campaign_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>Hospitality Vertical</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
</CustomObject>